# hqc-kem

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: kem.rs
src/: code.rs  hash.rs  kem.rs  lib.rs  pke.rs  polynomial.rs  size_traits.rs  utils.rs
src/code/: gf256.rs  reed_muller.rs  reed_solomon.rs
tests/: kat.rs  kat_hqc1  kat_hqc3
