[package]
name = "hqc-kem"
version = "0.1.0"
edition = "2024"

[dependencies]
hybrid-array = { git = "https://github.com/NicsTr/hybrid-array.git", version = "0.4.10", features = ["extra-sizes", "zerocopy"] }
bitvec = { version = "1.0.1", default-features = false }
cmov = { git = "https://github.com/NicsTr/utils.git" }
ctutils = { git = "https://github.com/NicsTr/utils.git" }
sha3 = { version = "0.10.8", default-features = false }
zerocopy = "0.8.39"
kem = { git = "https://github.com/NicsTr/traits.git" }
rand = "0.10.0-rc.1"
rand_core = "0.10.0-rc-2"

[features]
std = []

[dev-dependencies]
hex = "0.4.3"

